--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "dependencies": {
     "async": "^0.9.0",
     "bip38": "^1.3.0",
-    "bitcore": "git://github.com/decred/bitcore.git#master-new",
+    "bitcore-lib": "git://github.com/decred/bitcore.git#master-new",
     "bitcore-mnemonic": "git://github.com/decred/bitcore-mnemonic.git",
     "bitcore-payment-protocol": "^1.1.0",
     "browser-request": "^0.3.3",
