--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "devDependencies": {
     "bitcore-wallet-service": "git://github.com/decred/bitcore-wallet-service.git",
-    "browserify": "^9.0.3",
+    "browserify": "13.1",
     "chai": "^1.9.1",
     "coveralls": "^2.11.2",
     "grunt": "~0.4.0",
